        2.6.18-8.1.15.EL5 (RHEL 5).
        2.6.18.8 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.9-42.0.10.EL (RHEL 4),
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.2-cfs4
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : normal
Bugzilla   : 13969
Description: Update to RHEL5 kernel 2.6.18-8.1.15.el5.

Severity   : normal
Bugzilla   : 13874
Description: Update to SLES10 SP1 kernel 2.6.16.53-0.16

Severity   : normal
Bugzilla   : 13889
Description: Update to SLES9 kernel-2.6.5-7.287.3.

Severity   : normal
Bugzilla   : 14041
Description: Update to RHEL4 latest kernel.

Severity   : enhancement
Bugzilla   : 13690
Description: Build SLES10 patchless client fails
Details    : The configure was broken by run ./configure with 
	     --with-linux-obj=.... argument for patchless client. When the
	     configure use --with-linux-obj, the LINUXINCLUDE= -Iinclude
	     can't search header adequately. Use absolute path such as 
	     -I($LINUX)/include instead. 

Severity   : normal
Bugzilla   : 13888
Description: interrupt oig_wait produce painc on resend.
Details    : brw_redo_request can be used for resend requests from ptlrpcd and
	     private set, and this produce situation when rq_ptlrpcd_data not
	     copyed to new allocated request and triggered LBUG on assert 
	     req->rq_ptlrpcd_data != NULL. But this member used only for wakeup
	     ptlrpcd set if request is changed and can be safety changed to use
	     rq_set directly.

Severity   : normal
Bugzilla   : 13497
Description: LASSERT_{REQ,REP}SWAB macros are buggy
Details    : If SWAB_PARANOIA is disabled, the LASSERT_REQSWAB and
	     LASSERT_REPSWAB macros become no-ops, which is incorrect. Drop
	     these macros and replace them with their difinitions instead.

Severity   : normal
Bugzilla   : 13521