@@ -12,6 +12,14 @@
        * Recommended e2fsprogs version: 1.40.2-cfs4
        * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
 
+Severity   : major
+Frequency  : occasional
+Bugzilla   : 13917
+Description: MDS hang or stay in waiting lock
+Details    : If client receive lock with CBPENDING flag ldlm need send lock
+	     cancel as separate rpc, to avoid situation when cancel request
+	     can't processed due all i/o threads stay in wait lock.
+
 Severity   : normal
 Bugzilla   : 13969
 Description: Update to RHEL5 kernel 2.6.18-8.1.15.el5.
@@ -469,7 +477,6 @@ Description: Update RHEL 4 kernel to fix local root privilege escalation.
 Details    : Update to the latest RHEL 4 kernel to fix the vulnerability
 	     described in CVE-2007-4573.  This problem could allow untrusted
 	     local users to gain root access.
-
 
 Severity   : normal
 Frequency  : when using O_DIRECT and quotas
